--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   <header>
     <button id="modeToggle">🌙 Night</button>
-    <h1>MARIN KITAGAWA OFFICIAL</h1>
-    <p>Penyewaan Bot WhatsApp Anime Style ✨</p>
+    <h1>MARIN KITAGAWA STORE</h1>
+    <p>Penyewaan Bot WhatsApp </p>
     <p>Owner Bot: <strong>ikhlashdyt</strong></p>
   </header>
 
@@ -82,12 +82,12 @@
       <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;margin-top:30px;">
         <div style="background:linear-gradient(135deg,#2b1f3a,#3b2a5a);color:#fff;border-radius:24px;padding:25px;text-align:center;">
           <h3 style="color:#ff9fc9">Basic</h3>
-          <p><strong>Rp 15.000 / bulan</strong></p>
+          <p><strong>Rp 5.000 / bulan</strong></p>
           <a href="https://wa.me/6283877321654?text=halo,%20saya%20ingin%20menyewa%20bot%20paket%20Basic" target="_blank" class="btn">Pesan via WhatsApp</a>
         </div>
         <div style="background:linear-gradient(135deg,#1e2a4f,#2f4b8f);color:#fff;border-radius:24px;padding:25px;text-align:center;">
           <h3 style="color:#9fb4ff">Premium</h3>
-          <p><strong>Rp 25.000 / bulan</strong></p>
+          <p><strong>Rp 8.000 / bulan</strong></p>
           <a href="https://wa.me/6283877321654?text=halo,%20saya%20ingin%20menyewa%20bot%20paket%20Premium" target="_blank" class="btn">Pesan via WhatsApp</a>
         </div>
       </div>
@@ -97,8 +97,8 @@
       <h2>Hitung Total Sewa</h2>
       <label>Pilih Paket</label>
       <select id="paket" onchange="hitung()">
-        <option value="15000">Basic – Rp 15.000 / bulan</option>
-        <option value="25000">Premium – Rp 25.000 / bulan</option>
+        <option value="5000">Basic – Rp 5.000 / bulan</option>
+        <option value="8000">Premium – Rp 8.000 / bulan</option>
       </select>
 
       <label>Pilih Durasi</label>
