--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 
   <header>
     <button id="modeToggle">🌙 Night</button>
-    <h1>MARIN KITAGAWA STORE</h1>
-    <p>Penyewaan Bot WhatsApp </p>
+    <h1>MARIN KITAGAWA OFFICIAL</h1>
+    <p>Penyewaan Bot WhatsApp Anime Style ✨</p>
     <p>Owner Bot: <strong>ikhlashdyt</strong></p>
   </header>
 
   <div class="container">
     <div class="card">
-      <h2>Paket Layanan Bot</h2>
-      <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;margin-top:30px;">
+      <h2>Paket Layanan</h2>
+      <h3 style="text-align:center;margin-top:10px;color:#ff7eb3">Kategori Bot</h3>
+      <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;margin-top:20px;">
         <div style="background:linear-gradient(135deg,#2b1f3a,#3b2a5a);color:#fff;border-radius:24px;padding:25px;text-align:center;">
           <h3 style="color:#ff9fc9">Basic</h3>
           <p><strong>Rp 5.000 / bulan</strong></p>
@@ -92,13 +93,27 @@
         </div>
       </div>
 
+      <h3 style="text-align:center;margin:35px 0 10px;color:#ffd166">Kategori Jasa Bug</h3>
+      <p style="text-align:center;font-size:.9rem;opacity:.85">Semua jasa bug bertipe <span class="badge">Sekali Order</span></p>
+    </div>
+
       <hr style="margin:40px 0;opacity:.2">
 
       <h2>Hitung Total Sewa</h2>
       <label>Pilih Paket</label>
       <select id="paket" onchange="hitung()">
-        <option value="5000">Basic – Rp 5.000 / bulan</option>
-        <option value="8000">Premium – Rp 8.000 / bulan</option>
+        <optgroup label="Sewa Bot">
+          <option value="5000">Basic – Rp 5.000 / bulan</option>
+          <option value="8000">Premium – Rp 8.000 / bulan</option>
+        </optgroup>
+        <optgroup label="Jasa Bug (Sekali Order)">
+          <option value="3000">Force Close</option>
+          <option value="3000">FC Invis</option>
+          <option value="3000">DelayMaker</option>
+          <option value="3000">DelayInvis</option>
+          <option value="3000">Crash</option>
+          <option value="10000">Delay IP</option>
+        </optgroup>
       </select>
 
       <label>Pilih Durasi</label>
@@ -135,10 +150,25 @@
       const durasi=document.getElementById('durasi');
       const harga=parseInt(paket.value);
       const bulan=parseInt(durasi.value);
-      const total=harga*bulan;
-      document.getElementById('total').innerText='Total: Rp '+total.toLocaleString('id-ID');
       const paketText=paket.options[paket.selectedIndex].text;
-      const pesan=`halo, saya ingin menyewa bot untuk keperluan saya\n\nDetail Pesanan:\nPaket: ${paketText}\nDurasi: ${bulan} bulan\nTotal Transaksi: Rp ${total.toLocaleString('id-ID')}`;
+
+      const isBug = paket.parentElement.querySelector('optgroup[label="Jasa Bug (Sekali Order)"]')?.contains(paket.options[paket.selectedIndex]);
+      const total = isBug ? harga : harga * bulan;
+
+      document.getElementById('total').innerText='Total: Rp '+total.toLocaleString('id-ID');
+      durasi.disabled = !!isBug;
+
+      const pesan=`Halo Admin MARIN KITAGAWA OFFICIAL 👋
+
+Saya berminat dan siap melakukan pemesanan dengan detail berikut:
+
+📦 Produk: ${paketText}${isBug?' (Sekali Order)':''}
+⏳ Durasi: ${isBug ? 'Sekali Order' : bulan + ' bulan'}
+💰 Total Transaksi: Rp ${total.toLocaleString('id-ID')}
+
+Mohon informasi selanjutnya terkait proses layanan.
+Terima kasih 🙏`;
+
       document.getElementById('waBtn').href='https://wa.me/6283877321654?text='+encodeURIComponent(pesan);
     }
     hitung();
@@ -153,3 +183,4 @@
   </script>
 </body>
 </html>
+
